--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adit Gautam: Personal site and Portfolio</title>
+    <h1>Adit Gautam</h1>
+    <p>Super chill and funny guy.</p>
 </head>
 <body>
     
