--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adit Gautam: Personal site and Portfolio</title>
     <h1>Adit Gautam</h1>
-    <p>Super chill and funny guy.</p>
+    <p>Super chill and funny guy. Maybe the best to ever do it.</p>
 </head>
 <body>
     
