--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adit Gautam: Personal site and Portfolio</title>
-    <h1>Adit Gautam</h1>
-    <p>Super chill and funny guy. Maybe the best to ever do it.</p>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="/">Home</a>
+        <a href="/projects/">Projects</a>
+        <a href="/contact">Contact</a>
+    </nav>
+    <h1>Adit Gautam</h1>
+    <p>Super chill and funny guy. Maybe the best to ever do it.</p>
+    <img src="images/youngthug.jpg" alt="all my slimes say slatt">
 </body>
 </html>
