--- a/contact/index.html
+++ b/contact/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <nav>
-        <a href="/portfolio/">Home</a>
-        <a href="/portfolio/projects/">Projects</a>
-        <a href="/portfolio/contact/">Contact</a>
+        <a href="../">Home</a>
+        <a href="../projects/">Projects</a>
+        <a href="./">Contact</a>
     </nav>
 
     <h1>Contact</h1>
