--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="/portfolio/">Home</a>
-        <a href="/portfolio/projects/">Projects</a>
-        <a href="/portfolio/contact/">Contact</a>
+        <a href="./">Home</a>
+        <a href="projects/">Projects</a>
+        <a href="contact/">Contact</a>
     </nav>
     <h1>Adit Gautam</h1>
     <p>Super chill and funny guy. Maybe the best to ever do it.</p>
