--- a/projects/index.html
+++ b/projects/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <nav>
-        <a href="/portfolio/">Home</a>
-        <a href="/portfolio/projects/">Projects</a>
-        <a href="/portfolio/contact/">Contact</a>
+        <a href="../">Home</a>
+        <a href="./">Projects</a>
+        <a href="../contact/">Contact</a>
     </nav>
 
     <h1>Projects</h1>
