--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <a href="./">Home</a>
         <a href="projects/">Projects</a>
         <a href="contact/">Contact</a>
+        <a href="CV/">CV</a>
+        <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
     </nav>
     <h1>Adit Gautam</h1>
     <p>Super chill and funny guy. Maybe the best to ever do it.</p>
