--- a/projects/index.html
+++ b/projects/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
         <a href="../">Home</a>
         <a href="./">Projects</a>
         <a href="../contact/">Contact</a>
+        <a href="../CV/">CV</a>
+        <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
     </nav>
 
     <h1>Projects</h1>
