--- a/CV/index.html
+++ b/CV/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+  <nav>
     <a href="../">Home</a>
     <a href="./">Projects</a>
     <a href="../contact/">Contact</a>
     <a href="CV/">CV</a>
     <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
-
+  </nav>
     <header>
         <h1>Adit Gautam</h1>
         <p>ysl@slatt.com | 727-727-7270 | <a href="https://github.com/aditgautam" target="_blank">GitHub</a></p>
