--- a/CV/index.html
+++ b/CV/index.html
@@ -11,7 +11,7 @@
     <a href="../">Home</a>
     <a href="./">Projects</a>
     <a href="../contact/">Contact</a>
-    <a href="CV/">CV</a>
+    <a href="CV/" class="current">CV</a>
     <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
   </nav>
     <header>
