--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="../">Home</a>
-        <a href="./">Projects</a>
+        <a href="./" class="current">Projects</a>
         <a href="../contact/">Contact</a>
         <a href="../CV/">CV</a>
         <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
