--- a/projects/index.html
+++ b/projects/index.html
@@ -16,6 +16,69 @@
     </nav>
 
     <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quas sapiente neque veniam consequuntur quam. Quae nesciunt officiis eos, doloremque odio tempora dolorem minima, suscipit rem deserunt repellat odit cum.</p>
+        </article>
+        <article>
+            <h2>Hic quo perspiciatis similique!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Hic velit eos, at nihil nam est praesentium maiores officiis laboriosam distinctio illum fugit laudantium culpa inventore. Autem cumque, neque inventore officia rem dolores totam id pariatur reiciendis, dolor ipsa.</p>
+        </article>
+        <article>
+            <h2>Saepe dolores maxime incidunt.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nisi quaerat sapiente in error illo, natus ad odit quisquam. Vel quos obcaecati deleniti eos eaque magnam harum repellendus culpa, deserunt cumque recusandae saepe, itaque cupiditate, doloribus tenetur laudantium libero.</p>
+        </article>
+        <article>
+            <h2>Nisi consequatur illum praesentium?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Deserunt necessitatibus magnam corrupti modi quia excepturi doloribus ea, veritatis dignissimos rerum sunt praesentium! Illum obcaecati neque itaque voluptatum esse optio ut ipsa dolor sint facere! Ex est in nisi!</p>
+        </article>
+        <article>
+            <h2>Nostrum nesciunt tempora eius.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Consectetur deserunt, ut molestiae eos voluptas nostrum asperiores est exercitationem recusandae praesentium ex, eaque modi harum reprehenderit porro? Blanditiis facilis numquam saepe incidunt modi voluptate in nisi labore minus aliquam.</p>
+        </article>
+        <article>
+            <h2>Culpa sint quos maiores.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Debitis, odio, qui saepe laborum corrupti veritatis velit sequi adipisci similique, eaque nostrum reiciendis ex libero dolore illum! Dignissimos, blanditiis dolorum. Ad nam ipsam ratione iure blanditiis placeat, nihil vel?</p>
+        </article>
+        <article>
+            <h2>Soluta dolor ex at.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aliquid distinctio voluptate repudiandae doloremque dolore commodi nam mollitia aperiam et, facere maxime, eveniet in voluptatum sint, ab alias velit nemo ullam laudantium! Suscipit excepturi necessitatibus nobis assumenda dolore ut!</p>
+        </article>
+        <article>
+            <h2>Repudiandae accusamus cum voluptatibus.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Tenetur sit sed molestiae iusto possimus in quae odio assumenda rerum soluta perspiciatis esse distinctio praesentium repellat officia fuga atque adipisci libero minus, veniam corporis. Corrupti, et. Ex, laboriosam esse.</p>
+        </article>
+        <article>
+            <h2>Nisi quaerat explicabo fugit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quaerat impedit neque magnam aspernatur assumenda ex dolorum labore iste reiciendis cupiditate eos ea dolorem consequatur nulla id ipsum corporis, veritatis voluptates incidunt sequi at distinctio. Possimus molestias facilis doloremque.</p>
+        </article>
+        <article>
+            <h2>Tenetur ut nobis similique!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nulla officia ad veritatis, soluta nemo numquam nisi enim cum eius deserunt accusantium, rerum recusandae consectetur tenetur in modi dolores dolorem nihil optio provident, aperiam quasi eaque explicabo itaque? Modi?</p>
+        </article>
+        <article>
+            <h2>Modi culpa quibusdam deleniti!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolore facilis rerum ducimus labore distinctio excepturi impedit pariatur dolorum veritatis nobis quod repudiandae rem id, voluptatibus possimus praesentium dolores doloremque quidem reiciendis quas consequatur dignissimos mollitia optio? Ullam, asperiores.</p>
+        </article>
+        <article>
+            <h2>Aspernatur aliquid quis officia?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Sint optio aperiam nesciunt reprehenderit dolorum sunt necessitatibus sequi in magnam. Ullam, repudiandae recusandae facilis nemo fugiat provident itaque nostrum magni debitis voluptatem cupiditate mollitia labore impedit quisquam quae praesentium.</p>
+        </article>
+    </div>
+
     
 </body>
 </html>
