--- a/CV/index.html
+++ b/CV/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="../style.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body class="CV">
   <nav>
     <a href="../">Home</a>
     <a href="../projects/">Projects</a>
     <a href="../contact/">Contact</a>
-    <a href="./" class="current">CV</a>
+    <a href="./">CV</a>
     <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
   </nav>
     <header>
