--- a/contact/index.html
+++ b/contact/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body>
     <nav>
         <a href="../">Home</a>
         <a href="../projects/">Projects</a>
-        <a href="./" class="current">Contact</a>
+        <a href="./">Contact</a>
         <a href="../CV/">CV</a>
         <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
     </nav>
