--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adit Gautam: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="/global.js"></script>
 </head>
 <body>
     <nav>
-        <a href="./" class="current">Home</a>
+        <a href="./">Home</a>
         <a href="projects/">Projects</a>
         <a href="contact/">Contact</a>
         <a href="CV/">CV</a>
