--- a/projects/index.html
+++ b/projects/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body>
     <nav>
         <a href="../">Home</a>
-        <a href="./" class="current">Projects</a>
+        <a href="./">Projects</a>
         <a href="../contact/">Contact</a>
         <a href="../CV/">CV</a>
         <a href="https://github.com/aditgautam" target="_blank">GitHub</a>
