--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adit Gautam: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="/global.js"></script>
+    <script type="module" src="./global.js"></script>
+    <script src="index.js" type="module" defer></script>
 </head>
 <body>
     <h1>Adit Gautam</h1>
     <p>Super chill and funny guy. Maybe the best to ever do it.</p>
     <img src="images/youngthug.jpg" alt="all my slimes say slatt">
+
+    <h2>Latest Projects</h2>
+    <div class="projects"></div>
+    <section id="profile-stats"></section>
 </body>
 </html>
